--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
     <ul class="listMessages"></ul>
     <form class="js-form" name="chatForm">
       <textarea name="chatFormTextaria" cols="30" rows="10"></textarea>
-      <button class="chatFormButton">Send</button>
+      <br />
+      <input type="file" name="fileFormInput" />
+      <button class="chatFormButton" type="submit">Send</button>
     </form>
   </body>
 </html>
